--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "farmers-grocery-2",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
@@ -11,23 +11,15 @@
     "react-dom": "17.0.2",
     "react-icons": "4.2.0",
     "react-router-dom": "6.0.0-beta.0",
-    "react-scripts": "4.0.0",
-    "react-toastify": "7.0.4"
+    "@reduxjs/toolkit": "^1.6.0"
   },
   "devDependencies": {
-    "@babel/runtime": "7.13.8",
-    "typescript": "4.1.3"
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "vite": "^2.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
+  }
 }
