--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.0",
     "axios": "0.21.1",
     "history": "5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "4.2.0",
-    "react-router-dom": "6.0.0-beta.0",
-    "@reduxjs/toolkit": "^1.6.0"
+    "react-redux": "^7.2.4",
+    "react-router-dom": "6.0.0-beta.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
