--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "17.0.2",
     "react-icons": "4.2.0",
     "react-redux": "^7.2.4",
-    "react-router-dom": "6.0.0-beta.0"
+    "react-router-dom": "6.0.0-beta.0",
+    "react-stripe-checkout": "^2.6.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
