added landing page

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "vite": "^2.4.0"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "serve": "vite preview"
   }
